--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,5 +7,6 @@ theme:
 nav:
   - Home: index.md
   - Getting Started: getting-started.md
+  - Changelog: changelog.md
 repo_url: https://github.com/varuncoderise/demo_docs
 edit_uri: edit/main/docs/
