added new design

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_url: https://varuncoderise.github.io/demo_docs/
 
 theme:
   name: material
-  custom_dir: material/overrides
+  #custom_dir: material/overrides
   features:
     - announce.dismiss
     - content.action.edit
