--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ mkdocs-material-extensions~=1.3
 pygments~=2.16
 pymdown-extensions~=10.2
 mkdocs-material
+minify
 
 # Requirements for plugins
 babel~=2.10
